--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -16,15 +16,13 @@
 
     <script type="text/javascript" src="{{ url_for('static', filename='frontEndScript.js') }}"> </script>
     
-    <form>
-      <label for="inputx"> x coordinate</label>
-      <input type="number" id="inputx" min="0" max="2" step="1" value="0">
-      <label for="inputy"> y coordinate</label>
-      <input type="number" id="inputy" min="0" max="2" step="1" value="0">
-      <label for="inputz"> z coordinate</label>
-      <input type="number" id="inputz" min="0" max="2" step="1" value="0">
-      <input type="button" id="pressDraw" onclick="drawFromInputs()" value="Add ball drawing">
-      <br>
+    <form action='/userServer'>
+      <label for="move"> Move: </label>
+      <input type="number" name="move" min="0" max="8" step="1" value="0">
+      <input type="submit" formmethod="post" value="Send Move">
+    </form>
+    <br>
+     <form>
       <input type="button" id="ccw" onclick="rotate(-15)" value="rotate -15">
       <input type="button" id="cw" onclick="rotate(15)" value="rotate 15">
     </form>
